# ros_soccer

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
Arduino Driver/Soccer_10/: Soccer_10.ino  cSensor.h
Arduino Driver/Soccer_3/: Soccer_3.ino  cSensor.h
Arduino Driver/Soccer_4/: Soccer_4.ino  cSensor.h
Arduino Driver/Soccer_4_error/: Soccer_4_error.ino  TB6612FNG.h
Arduino Driver/Soccer_5/: Soccer_5.ino  cSensor.h  cTone.cpp  cTone.h
Arduino Driver/Soccer_6/: Soccer_6.ino  TB6612FNG.h  cSensor.h
Arduino Driver/Soccer_7/: Soccer_7.ino  cSensor.h
Arduino Driver/Soccer_8/: Soccer_8.ino
Arduino Driver/Soccer_9/: Soccer_9.ino  cSensor.h
cfg/: teleop.yaml
latex/: holonomic_robot.tex
latex/archive/: 25122011-holonomic_robot.tex  31122011-holonomic_robot.tex
launch/: efk.launch  ekf_roomba.launch  soccer.launch  soccer_efk.launch  soccer_teleop.launch  teleop.launch
msg/: Battery.msg  Imu.msg
src/: MessageDB.hpp  Serial.h  SharedMemory.hpp  SoccerMessageDB.hpp  SoccerPublisher.hpp  kSerial.h  kevin.h  make_bag.cpp  soccer.cpp  soccer_gui.cpp
src/MadgwickAHRS/: MadgwickAHRS.c  MadgwickAHRS.h
src/Nav/: Kalman.h  nav.cpp
src/nodes/: ahrs.cpp
