<package>
  <name>soccer</name>
  <version>0.0.0</version>
  <description>

     soccer

  </description>
  <author>Kevin Walchko</author>
  <maintainer email="kevin@todo.todo">kevin</maintainer>
  <license>BSD</license>
  
  <url>http://github.com/walchko/osx_joystick</url>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ip_serial</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ip_serial</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


